header alignement fixed

--- a/app/static/css/header.css
+++ b/app/static/css/header.css
@@ -20,6 +20,8 @@ header {
 .header_container {
 	display: flex;
 	flex-direction: row;
+	justify-content: space-between;
+	padding-right: 2rem;
 }
 .logo_container {
 	display: flex;
